--- a/force-app/main/default/classes/AuthorisationRequest.cls
+++ b/force-app/main/default/classes/AuthorisationRequest.cls
@@ -80,11 +80,21 @@ public without sharing class AuthorisationRequest {
     public String shopperReference { get; set; }
 
     /**
+    * Specifies the recurringProcessingModel
+    */
+    @namespaceAccessible
+    public enum RecurringProcessingModelEnum {
+        Subscription,
+        CardOnFile,
+        UnscheduledCardOnFile
+    }
+
+    /**
     * Defines a recurring payment type.
     * @return recurringProcessingModel
     */
     @namespaceAccessible
-    public String recurringProcessingModel { get; set; }
+    public RecurringProcessingModelEnum recurringProcessingModel { get; set; }
 
     @namespaceAccessible
     public AuthorisationRequest() {
