Changing model from AdditionalData to LineItem array for checkout api

--- a/force-app/main/default/classes/CheckoutModificationRequest.cls
+++ b/force-app/main/default/classes/CheckoutModificationRequest.cls
@@ -1,4 +1,4 @@
-@namespaceAccessible
+@NamespaceAccessible
 public interface CheckoutModificationRequest {
     //interface to declare common methods from CheckoutCaptureRequest and CheckoutRefundRequest
     Amount getAmount();
@@ -10,6 +10,6 @@ public interface CheckoutModificationRequest {
     String getMerchantAccount();
     void setMerchantAccount(String merchantAccount);
 
-    Map<String, Object> getAdditionalData();
-    void setAdditionalData(Map<String, Object> additionalData);
+    List<LineItem> getLineItems();
+    void setLineItems(List<LineItem> lineItems);
 }
