--- a/force-app/main/default/classes/CheckoutRefundRequest.cls
+++ b/force-app/main/default/classes/CheckoutRefundRequest.cls
@@ -1,61 +1,71 @@
 /*
 * Represents an Adyen Checkout Refund Request
 */
-@namespaceAccessible
+@NamespaceAccessible
 public with sharing class CheckoutRefundRequest implements CheckoutModificationRequest {
 
-    /**
-    * Payment refund amount
-    * @return amount
-    */
-    @namespaceAccessible
-    public Amount amount { get; set; }
+	/**
+	* Payment refund amount
+	*/
+	@NamespaceAccessible
+	public Amount amount { get; set; }
 
-    @namespaceAccessible
-    public Amount getAmount() {
-        return amount;
-    }
+	@NamespaceAccessible
+	public Amount getAmount() {
+		return amount;
+	}
 
-    @namespaceAccessible
-    public void setAmount(Amount amount) {
-        this.amount = amount;
-    }
+	@NamespaceAccessible
+	public void setAmount(Amount amount) {
+		this.amount = amount;
+	}
 
-    /**
-    * The reference to uniquely identify a payment. This reference is used in all communication with you about the payment status. We recommend using a unique value per payment; however, it is not a requirement.\nIf you need to provide multiple references for a transaction, separate them with hyphens ("-").\nMaximum length: 80 characters.
-    * @return reference
-    */
-    @namespaceAccessible
-    public String reference { get; set; }
+	/**
+	* The reference to uniquely identify a payment. This reference is used in all communication with you about the payment status. We recommend using a unique value per payment; however, it is not a requirement.\nIf you need to provide multiple references for a transaction, separate them with hyphens ("-").\nMaximum length: 80 characters.
+	*/
+	@NamespaceAccessible
+	public String reference { get; set; }
 
-    @namespaceAccessible
-    public String getReference() {
-        return reference;
-    }
+	@NamespaceAccessible
+	public String getReference() {
+		return reference;
+	}
 
-    @namespaceAccessible
-    public void setReference(String reference) {
-        this.reference = reference;
-    }
+	@NamespaceAccessible
+	public void setReference(String reference) {
+		this.reference = reference;
+	}
 
-    /**
-    * Merchant account name
-    * @return merchantAccount
-    */
-    @namespaceAccessible
-    public String merchantAccount { get; set; }
+	/**
+	* Merchant account name
+	*/
+	@NamespaceAccessible
+	public String merchantAccount { get; set; }
 
-    @namespaceAccessible
-    public String getMerchantAccount() {
-        return merchantAccount;
-    }
+	@NamespaceAccessible
+	public String getMerchantAccount() {
+		return merchantAccount;
+	}
 
-    @namespaceAccessible
-    public void setMerchantAccount(String merchantAccount) {
-        this.merchantAccount = merchantAccount;
-    }
+	@NamespaceAccessible
+	public void setMerchantAccount(String merchantAccount) {
+		this.merchantAccount = merchantAccount;
+	}
 
-    @namespaceAccessible
-    public CheckoutRefundRequest(){}
+	@NamespaceAccessible
+	public List<LineItem> lineItems { get; set; }
+
+	@NamespaceAccessible
+	public List<LineItem> getLineItems() {
+		return lineItems;
+	}
+
+	@NamespaceAccessible
+	public void setLineItems(List<LineItem> lineItems) {
+		this.lineItems = lineItems;
+	}
+
+	@NamespaceAccessible
+	public CheckoutRefundRequest(){}
 
 }
