feat: implementing AuthenticationData property in PaymentsRequest class

--- a/force-app/main/default/classes/PaymentsRequest.cls
+++ b/force-app/main/default/classes/PaymentsRequest.cls
@@ -9,110 +9,102 @@
 * Do not edit the class manually.
 */
 
-@namespaceAccessible
+@NamespaceAccessible
 public without sharing class PaymentsRequest {
     /**
     * Get additionalData
-    * @return additionalData
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public Map<String, String> additionalData { get; set; }
 
     /**
     * Get amount
-    * @return amount
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public Amount amount { get; set; }
 
     /**
     * Get applicationInfo
-    * @return applicationInfo
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public ApplicationInfo applicationInfo { get; set; }
 
     /**
-    * Get billingAddress
-    * @return billingAddress
+    * Configuration data for 3DS payments.
     */
-    @namespaceAccessible
+    @NamespaceAccessible
+    public AuthenticationData authenticationData { get; set; }
+
+    /**
+    * Get billingAddress
+    */
+    @NamespaceAccessible
     public Address billingAddress { get; set; }
 
     /**
     * Get browserInfo
-    * @return browserInfo
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public BrowserInfo browserInfo { get; set; }
 
     /**
     * Get card
-    * @return card
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public Card card { get; set; }
 
     /**
     * Get cardDetails
-    * @return cardDetails
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public CardDetails cardDetails { get; set; }
 
     /**
     * Get channel
-    * @return channel
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public String channel { get; set; }
 
     /**
     * The shopper\'s date of birth.\n\nFormat [ISO-8601](https://www.w3.org/TR/NOTE-datetime): YYYY-MM-DD
-    * @return dateOfBirth
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public Datetime dateOfBirth { get; set; }
 
     /**
     * Get deliveryAddress
-    * @return deliveryAddress
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public Address deliveryAddress { get; set; }
 
     /**
     * A string containing the shopper\'s device fingerprint. For more information, refer to [Device fingerprinting](https://docs.adyen.com/risk-management/device-fingerprinting).
-    * @return deviceFingerprint
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public String deviceFingerprint { get; set; }
 
     /**
     * The merchant account identifier, with which you want to process the transaction.
-    * @return merchantAccount
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public String merchantAccount { get; set; }
 
     /**
     * Get card
-    * @return card
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public PaymentMethodDetails paymentMethod { get; set; }
 
     /**
     * Get origin
-    * @return origin
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public String origin { get; set; }
 
     /**
     * Defines a recurring payment type.\nAllowed values:\n* `Subscription` – A transaction for a fixed or variable amount, which follows a fixed schedule.\n* `CardOnFile` – With a card-on-file (CoF) transaction, card details are stored to enable one-click or omnichannel journeys, or simply to streamline the checkout process. Any subscription not following a fixed schedule is also considered a card-on-file transaction.\n* `UnscheduledCardOnFile` – An unscheduled card-on-file (UCoF) transaction is a transaction that occurs on a non-fixed schedule and/or have variable amounts. For example, automatic top-ups when a cardholder\'s balance drops below a certain amount.\n
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public enum RecurringProcessingModelEnum {
         CardOnFile,
         Subscription,
@@ -121,64 +113,56 @@ public without sharing class PaymentsRequest {
 
     /**
     * Defines a recurring payment type.\nAllowed values:\n* `Subscription` – A transaction for a fixed or variable amount, which follows a fixed schedule.\n* `CardOnFile` – With a card-on-file (CoF) transaction, card details are stored to enable one-click or omnichannel journeys, or simply to streamline the checkout process. Any subscription not following a fixed schedule is also considered a card-on-file transaction.\n* `UnscheduledCardOnFile` – An unscheduled card-on-file (UCoF) transaction is a transaction that occurs on a non-fixed schedule and/or have variable amounts. For example, automatic top-ups when a cardholder\'s balance drops below a certain amount.\n
-    * @return recurringProcessingModel
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public RecurringProcessingModelEnum recurringProcessingModel { get; set; }
 
     /**
     * The reference to uniquely identify a payment. This reference is used in all communication with you about the payment status. We recommend using a unique value per payment; however, it is not a requirement.\nIf you need to provide multiple references for a transaction, separate them with hyphens ("-").\nMaximum length: 80 characters.
-    * @return reference
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public String reference { get; set; }
 
     /**
     * The URL to return to in case of a redirection.\nThe format depends on the channel. This URL can have a maximum of 1024 characters.\n* For web, include the protocol `http://` or `https://`. You can also include your own additional query parameters, for example, shopper ID or order reference number.\nExample: `https://your-company.com/checkout?shopperOrder=12xy`\n* For iOS, use the custom URL for your app. To know more about setting custom URL schemes, refer to the [Apple Developer documentation](https://developer.apple.com/documentation/uikit/inter-process_communication/allowing_apps_and_websites_to_link_to_your_content/defining_a_custom_url_scheme_for_your_app).\nExample: `my-app://`\n* For Android, use a custom URL handled by an Activity on your app. You can configure it with an [intent filter](https://developer.android.com/guide/components/intents-filters).\nExample: `my-app://your.package.name`
-    * @return returnUrl
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public String returnUrl { get; set; }
 
     /**
     * Get riskData
-    * @return riskData
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public RiskData riskData { get; set; }
 
     /**
     * Some payment methods require defining a value for this field to specify how to process the transaction.\n\nFor the Bancontact payment method, it can be set to:\n* `maestro` (default), to be processed like a Maestro card, or\n* `bcmc`, to be processed like a Bancontact card.
-    * @return selectedBrand
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public String selectedBrand { get; set; }
 
     /**
     * The `recurringDetailReference` you want to use for this payment. The value `LATEST` can be used to select the most recently stored recurring detail.
-    * @return selectedRecurringDetailReference
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public String selectedRecurringDetailReference { get; set; }
 
     /**
     * The shopper\'s email address. We recommend that you provide this data, as it is used in velocity fraud checks.\n> For 3D Secure 2 transactions, schemes require the `shopperEmail` for both `deviceChannel` **browser** and **app**.
-    * @return shopperEmail
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public String shopperEmail { get; set; }
 
     /**
     * The shopper\'s IP address. In general, we recommend that you provide this data, as it is used in a number of risk checks (for instance, number of payment attempts or location-based checks).\n> Required for 3D Secure 2 transactions. This field is also mandatory for some merchants depending on your business model. For more information, [contact Support](https://support.adyen.com/hc/en-us/requests/new).
-    * @return shopperIP
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public String shopperIP { get; set; }
 
     /**
     * Specifies the sales channel, through which the shopper gives their card details, and whether the shopper is a returning customer.\nFor the web service API, Adyen assumes Ecommerce shopper interaction by default.\n\nThis field has the following possible values:\n* `Ecommerce` - Online transactions where the cardholder is present (online). For better authorisation rates, we recommend sending the card security code (CSC) along with the request.\n* `ContAuth` - Card on file and/or subscription transactions, where the cardholder is known to the merchant (returning customer). If the shopper is present (online), you can supply also the CSC to improve authorisation (one-click payment).\n* `Moto` - Mail-order and telephone-order transactions where the shopper is in contact with the merchant via email or telephone.\n* `POS` - Point-of-sale transactions where the shopper is physically present to make a payment using a secure payment terminal.
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public enum ShopperInteractionEnum {
         Ecommerce,
         ContAuth,
@@ -188,44 +172,39 @@ public without sharing class PaymentsRequest {
 
     /**
     * Specifies the sales channel, through which the shopper gives their card details, and whether the shopper is a returning customer.\nFor the web service API, Adyen assumes Ecommerce shopper interaction by default.\n\nThis field has the following possible values:\n* `Ecommerce` - Online transactions where the cardholder is present (online). For better authorisation rates, we recommend sending the card security code (CSC) along with the request.\n* `ContAuth` - Card on file and/or subscription transactions, where the cardholder is known to the merchant (returning customer). If the shopper is present (online), you can supply also the CSC to improve authorisation (one-click payment).\n* `Moto` - Mail-order and telephone-order transactions where the shopper is in contact with the merchant via email or telephone.\n* `POS` - Point-of-sale transactions where the shopper is physically present to make a payment using a secure payment terminal.
-    * @return shopperInteraction
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public ShopperInteractionEnum shopperInteraction { get; set; }
 
     /**
     * The combination of a language code and a country code to specify the language to be used in the payment.
-    * @return shopperLocale
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public String shopperLocale { get; set; }
 
     /**
     * Get shopperName
-    * @return shopperName
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public Name shopperName { get; set; }
 
     /**
     * The shopper\'s reference to uniquely identify this shopper (e.g. user ID or account ID).\n> This field is required for recurring payments.
-    * @return shopperReference
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public String shopperReference { get; set; }
 
     /**
     * When this is set to **true** and the `shopperReference` is provided, the payment details will be stored.
-    * @return storePaymentMethod
     */
-    @namespaceAccessible
+    @NamespaceAccessible
     public Boolean storePaymentMethod { get; set; }
 
-    @namespaceAccessible
+    @NamespaceAccessible
     public PaymentsRequest() {
     }
 
-    @namespaceAccessible
+    @NamespaceAccessible
     public static PaymentsRequest getExample() {
         PaymentsRequest paymentsRequest = new PaymentsRequest();
         paymentsRequest.amount = Amount.getExample();
@@ -252,10 +231,11 @@ public without sharing class PaymentsRequest {
         paymentsRequest.shopperName = Name.getExample();
         paymentsRequest.shopperReference = '';
         paymentsRequest.storePaymentMethod = false;
+        paymentsRequest.authenticationData = AuthenticationData.getExample();
         return paymentsRequest;
     }
 
-    @namespaceAccessible
+    @NamespaceAccessible
     public Boolean equals(Object obj) {
         if (obj instanceof PaymentsRequest) {
             PaymentsRequest paymentsRequest = (PaymentsRequest) obj;
@@ -287,7 +267,7 @@ public without sharing class PaymentsRequest {
         return false;
     }
 
-    @namespaceAccessible
+    @NamespaceAccessible
     public Integer hashCode() {
         Integer hashCode = 43;
         hashCode = (17 * hashCode) + (additionalData == null ? 0 : System.hashCode(additionalData));
